package ma.iatacademy.api.domain.enums;

public enum LearnerDocStatus {
    SUBMITTED,
    ACCEPTED,
    REJECTED
}
