@startuml diagramme_classes_stage_certification
!theme plain

skinparam dpi 300
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty members

skinparam nodesep 100
skinparam ranksep 48

skinparam class {
    BackgroundColor White
    BorderColor #142B4B
    BorderThickness 1.2
    ArrowColor #142B4B
    ArrowThickness 1.3
    FontColor #142B4B
    FontStyle Bold
    AttributeFontColor #23282F
    AttributeFontStyle Normal
    AttributeFontSize 12
}

skinparam title {
    FontColor #142B4B
    FontSize 20
    FontStyle Bold
}

title Diagramme de classes — Stage, certification et badges

abstract class AuditableEntity {
  - id : UUID
  # createdAt : Instant
  # updatedAt : Instant
}

class User {
  - email : String
  - fullName : String
  - role : Role
}

class Formation {
  - title : String
}

class LearnerUfValidation {
  - ufCode : String
  - validated : boolean
  - validatedAt : Instant
  - note : String
}

class StageSignoffInvite {
  - token : String
  - tutorEmail : String
  - tutorName : String
  - expiresAt : Instant
  - usedAt : Instant
}

class LearnerDocument {
  - docType : LearnerDocType
  - status : LearnerDocStatus
  - notes : String
}

class Asset {
  - filename : String
  - assetKind : String
  - extractedText : String
}

class Certificate {
  - verificationCode : String
  - issuedAt : Instant
  - pdfPath : String
  - physicallyDelivered : boolean
}

class UserBadge {
  - badgeCode : BadgeCode
  - awardedAt : Instant
  - shareCode : String
}

enum BadgeCode {
  FIRST_MODULE
  PERFECT_QUIZ
  STAGE_VALIDATED
  PROFILE_COMPLETE
  FORUM_CONTRIBUTOR
  YEAR1_VALIDATED
  YEAR2_VALIDATED
}

enum LearnerDocType {
  CONVENTION_ECOLE
  ASSURANCE
  CONVENTION_ENTREPRISE
  RAPPORT_STAGE
  PRESENTATION_SOUTENANCE
}

enum LearnerDocStatus {
  SUBMITTED
  ACCEPTED
  REJECTED
}

AuditableEntity <|-- LearnerUfValidation
AuditableEntity <|-- StageSignoffInvite
AuditableEntity <|-- LearnerDocument
AuditableEntity <|-- Certificate
AuditableEntity <|-- UserBadge

LearnerDocument ..> LearnerDocType
LearnerDocument ..> LearnerDocStatus
UserBadge ..> BadgeCode

User -- "0..N" LearnerUfValidation : apprenant >
User "0..1" -- "0..N" LearnerUfValidation : validé par >
LearnerUfValidation -- "0..N" StageSignoffInvite

User -- "0..N" LearnerDocument : apprenant >
User -- "0..N" LearnerDocument : déposé par >
Asset -- "0..N" LearnerDocument

User -- "0..N" Certificate
Formation -- "0..N" Certificate

User -- "0..N" UserBadge : apprenant >

@enduml
